Can my soda component be added to the master branch? (#22)
* Automatically calculates total

* Added angular material

* Setup to use material design components

* Using mat card

Also updated styless.css to include theming import

* Check all and uncheck all implemented

* Created component

* Created cola button and backend soda return function

* Completed functionality for citrus and other sodas

* Revert "Merge branch 'master' into jdenhartog/week-07-slack-n-tell"

This reverts commit 8d086eec952a618b2d5ccfc206917ff11f95a17f, reversing
changes made to 894270c846b829ebc6edc42943f43d97f04270ab.

* Revert "Revert "Merge branch 'master' into jdenhartog/week-07-slack-n-tell""

This reverts commit f876eaedc6011f96c0b53dd8a17c89b95655d469.

* Fixing changes made to package and package-lock

* removed newline at end of pizza-toppings.component

* fix spacing in pizza-toppings.components and remove import in styles.css

* newline in pizza-toppings.component.ts

* pizza toppings component spacing

* pizza toppings component spacing

Surely this will be correct

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,4 @@
 <app-quote-of-the-day></app-quote-of-the-day>
 <app-np-calculator></app-np-calculator>
 <app-bh-division-calculator></app-bh-division-calculator>
+<app-jdh-soda></app-jdh-soda>
